db/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-service 
spec:
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
